# Magnitude

./: .ignore  2  CMakeLists.txt  RDVIEWS.md  README.md  debug.ps1  imgui.ini  run.ps1
References/: NIU - CS490 _ CS631 Project 4 Poly Clip Modifications.html  NIU - CS490 _ CS631 Project 4 Scan Conversion.html  NIU - CS490 _ CS631 Project 4.html  PBMplus Overview.html  RD Data File Format.html
References/PBMplus Overview_files/: style631.css
assets/icons/: imgui.ini
rdviews/: ball_zoom.rd  circles.rd  cone.rd  curves.rd  example.rd  imgui.ini  light_test.rd  lines.rd  lines_out.rd  location.rd  object.rd  s01.rd  s02.rd  s06.rd  s20.rd  s21.rd  s22.rd  s23.rd  s24.rd  s25.rd  s26.rd  s27.rd  s27_cross.rd  s28.rd  s29.rd  s30.rd  s31.rd  s32.rd  s33.rd  s34.rd  s35.rd  s36.rd  s37.rd  s38.rd  s39.rd  s40.rd  s41.rd  s42.rd  s43.rd  s44.rd  (+10 more)
source/: bindings.hpp  common.hpp  definitions.hpp  editor.hpp  environment.cpp  environment.hpp  linear.cpp  linear.hpp  main.cpp
source/components/: component.cpp  component.hpp  console.cpp  console.hpp  imguidocs.hpp  inspector.cpp  inspector.hpp  mainmenu.cpp  mainmenu.hpp  metrics.cpp  metrics.hpp  sceneviewer.cpp  sceneviewer.hpp  texteditor.cpp  texteditor.hpp
source/editor/: component.cpp  component.hpp  console.hpp  editor.cpp  editor.hpp  imguidocs.hpp  inspector.hpp  mainmenu.cpp  mainmenu.hpp  metrics.hpp  rdviewer.cpp  rdviewer.hpp  sceneviewer.hpp
source/graphics/: bitmap.cpp  bitmap.hpp  color.cpp  color.hpp
source/platform/: filesystem.hpp  input.hpp  opengl.hpp  system.hpp  window.hpp
source/platform/win32/: filesystem.cpp  input.cpp  inputhandler.cpp  inputhandler.hpp  opengl.cpp  system.cpp  win32opengl.cpp  win32opengl.hpp  win32window.cpp  win32window.hpp  window.cpp
source/rdparser/: rdparser.cpp  rdparser.hpp  rdtokenizer.cpp  rdtokenizer.hpp
source/rdparser/traversals/: framesearch.hpp
source/renderer/: framebuffer.cpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  renderinterface.hpp  worldsim.hpp
source/utilities/: cli.cpp  cli.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  path.cpp  path.hpp  rdparser.cpp  rdparser.hpp  rdtokenizer.cpp  rdtokenizer.hpp  resourceman.cpp  resourceman.hpp
